circle overflow fix

--- a/client/src/components/publish/Publish.css
+++ b/client/src/components/publish/Publish.css
@@ -7,26 +7,25 @@
   position: absolute;
   z-index: 0;
   filter: blur(30px);
-  overflow:hidden;
 }
 
 .circle1-red {
-  right: -4%;
+  right: 4%;
 }
 
 .circle1-violet {
-  right: -4%;
+  right: 4%;
   top: 15%;
 }
 
 .circle2-red {
   bottom: 8%;
-  left: -4%;
+  left: 10%;
 }
 
 .circle2-violet {
-  bottom: -2%;
-  left: -4%;
+  bottom: 2%;
+  left: 4%;
 }
 
 .Publish__form-circle-red {
@@ -90,7 +89,7 @@
 .Publish__form--upload-pdf {
   padding: 60px 30px;
   width: 60%;
-  min-width: 324px;
+  min-width: 300px;
   line-height: 30px;
 }
 
@@ -150,7 +149,7 @@ label {
   flex-basis: 50%;
 }
 
-
 .Publish__form--input-boxes h2 {
 	color: var(--pH-heading-color);
 }
+
