--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,10 +30,6 @@ body {
   --button-light-background-color: #0097FD54;
 }
 
-div#root {
-  overflow: hidden;
-}
-
 .container {
   max-width: 1500px;
   margin: 0 auto;
